--- a/quacktube/package.json
+++ b/quacktube/package.json
@@ -13,6 +13,7 @@
     "description": "",
     "dependencies": {
         "@google-cloud/storage": "^7.12.0",
+        "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "fluent-ffmpeg": "^2.1.3"
     },
